AF_UNIX: It is possible for UNIX datagram sockets to be connected to themselves. The updated code assumed that that could not happen and would try to lock the unp mutex twice.

There may be a lingering issue here but this fixes it for the
reporter.

PR:	228458
Reported by:	marieheleneka at gmail.com


git-svn-id: svn+ssh://svn.freebsd.org/base/head@334185 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f